syntax = "proto3";
package KCPP.Save;

message Save {
	uint64 counter = 1;
	uint32 prestige = 7; 
	bool keyboardInput = 2;
	bool mouseInput = 3;
	bool controllerInput = 4;
	string current_style = 5;
	map < string, bytes > style_settings = 6;
};
